routing-tables.tf
# Resource: aws_route_table
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/route_table

resource "aws_route_table" "public" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  route {
    # The CIDR block of the route
    cidr_block = "0.0.0.0/0"

    # VPC internet gateway 
    gateway_id = aws_internet_gateway.main.id
  }
  # tag to assign to the resource
  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table" "private1" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  route {
    # The CIDR block of the route
    cidr_block = "0.0.0.0/0"

    # VPC internet gateway 
    nat_gateway_id = aws_nat_gateway.gw1.id
  }
  # tag to assign to the resource
  tags = {
    Name = "private1"
  }
}

resource "aws_route_table" "private2" {
  # The VPC ID
  vpc_id = aws_vpc.main.id

  route {
    # The CIDR block of the route
    cidr_block = "0.0.0.0/0"

    # VPC internet gateway 
    nat_gateway_id = aws_nat_gateway.gw2.id
  }
  # tag to assign to the resource
  tags = {
    Name = "private2"
  }
}
